--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -2,22 +2,33 @@
 
 {% block body %}
 <h2>All Posts</h2>
-{{ following }}
 {% if user.is_authenticated %}
+{% for post in page_obj %}
+<blockquote class="blockquote">
+    {{ post.body | linebreaks }}
+</blockquote>
+<figcaption class="blockquote-footer">
+    {{ post.created }}
+    {{ post.user}}
+</figcaption>
+{% endfor %}
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+        <a href="?page=1">&laquo; first</a>
+        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
 
-<div class="comments">
-    {% for post in posts.all %}
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
 
-    <blockquote class="blockquote">
-        {{ post.body | linebreaks }}
-    </blockquote>
-    <figcaption class="blockquote-footer">
-        {{ post.created }}
-        {{ post.user}}
-    </figcaption>
-    {% endfor %}
+        {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">next</a>
+        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
 </div>
-
 {% endif %}
 
 {% endblock %}
