--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -12,23 +12,27 @@
     {{ post.user}}
 </figcaption>
 {% endfor %}
-<div class="pagination">
-    <span class="step-links">
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
         {% if page_obj.has_previous %}
-        <a href="?page=1">&laquo; first</a>
-        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+
         {% endif %}
-
-        <span class="current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-        </span>
-
+        {% for page_number in paginator.page_range %}
+        {% if page.obj.number == page_number %}
+        <li class="page-item"><a class="page-link" href="">{{ page_number }}</a></li>
+        {% else %}
+        <li class="page-item"><a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a></li>
+        {% endif %}
+        {% endfor %}
         {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}">next</a>
-        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
         {% endif %}
-    </span>
-</div>
+
+    </ul>
+</nav>
+
 {% endif %}
 
 {% endblock %}
