--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -12,9 +12,10 @@
     {{ post.user}}
 </figcaption>
 {% endfor %}
-
+{% if paginator.count > 0 %}
 <nav aria-label="Page navigation example">
     <ul class="pagination">
+        
         {% if page_obj.has_previous %}
         <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
 
@@ -32,6 +33,7 @@
 
     </ul>
 </nav>
+{% endif %}
 
 {% endif %}
 
