--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -3,26 +3,52 @@
 {% block body %}
 <h2>All Posts</h2>
 {% if user.is_authenticated %}
-{% for post in page_obj %}
-<blockquote class="blockquote">
-    {{ post.body | linebreaks }}
-</blockquote>
-<figcaption class="blockquote-footer">
-    {{ post.created }}
-    {{ post.user}}
-</figcaption>
-{% endfor %}
+<div class="comments">
+    {% for post in page_obj %}
+    <blockquote class="blockquote">
+        {{ post.body | linebreaks }}
+    </blockquote>
+    <figcaption class="blockquote-footer">
+        {{ post.created }}
+        {{ post.user}}
+    </figcaption>
+
+    <!-- comments -->
+    <h6>{{ post.comments.count }} Comments</h6>
+    {% for comment in post.comments.all %}
+        <p class="blockquote">
+            {{ comment.comment_body | linebreaks }}
+        </p>
+        <figcaption class="blockquote-footer">
+            {{ comment.comment_created }}
+            {{ comment.comment_owner}}
+        </figcaption>
+    {% endfor %}
+
+    <form action="{% url 'comment' post.id %}" , method="post">
+        {% csrf_token %}
+        {% for field in form %}
+        <div class="form-text">
+            <div>{{ field }}</div>
+        </div>
+        {% endfor %}
+        <input id="post-button" class="btn btn-primary btn-sm" type="submit" value="Comment" name="save">
+    </form>
+    {% endfor %}
+</div>
+
 {% if paginator.count > 0 %}
 <nav aria-label="Page navigation example">
     <ul class="pagination">
-        
         {% if page_obj.has_previous %}
-        <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
-
+        <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        </li>
         {% endif %}
+
         {% for page_number in paginator.page_range %}
         {% if page.obj.number == page_number %}
-        <li class="page-item"><a class="page-link" href="">{{ page_number }}</a></li>
+
+        <li class="page-item active"><a class="page-link" href="">{{ page_number }}</a></li>
         {% else %}
         <li class="page-item"><a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a></li>
         {% endif %}
@@ -30,11 +56,8 @@
         {% if page_obj.has_next %}
         <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
         {% endif %}
-
     </ul>
 </nav>
 {% endif %}
-
 {% endif %}
-
 {% endblock %}
