--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -66,3 +66,7 @@
 {% endif %}
 {% endif %}
 {% endblock %}
+
+{% block script %}
+    <script src="/network/static/network/script.js"></script>
+{% endblock %}
