--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -32,6 +32,11 @@
             {{ post.created }}
             {{ post.user}}
         </figcaption>
+        {% if post.user|stringformat:"s" != request.user.username %}
+        <a class="likes" href="{% url 'like' post.id %}">❤️{{ post.likes }}</a>
+        {% else %}
+        <a class="likes" href="#">❤️{{ post.likes }}</a>
+        {% endif %}
         {% endif %}
         {% endfor %}
         {% endif %}
