--- a/network/templates/network/view.html
+++ b/network/templates/network/view.html
@@ -11,7 +11,8 @@
 
 <div class="comments">
     {% for post in posts.all %}
-
+    <!-- get only posts for username profile -->
+    {% if post.user == username %}
     <blockquote class="blockquote">
         {{ post.body | linebreaks }}
     </blockquote>
@@ -19,6 +20,12 @@
         {{ post.created }}
         {{ post.user}}
     </figcaption>
+    {% if post.user|stringformat:"s" != request.user.username %}
+    <a class="likes" href="{% url 'like' post.id %}">❤️{{ post.likes }}</a>
+    {% else %}
+    <a class="likes" href="#">❤️{{ post.likes }}</a>
+    {% endif %}
+    {% endif %}
     {% endfor %}
 </div>
 
