--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -14,9 +14,9 @@
         {{ post.user}}
     </figcaption>
     {% if post.user|stringformat:"s" != request.user.username %}
-    <a id="likes" href="{% url 'like' post.id %}">❤️{{ post.likes }}</a>
+    <a class="likes" href="{% url 'like' post.id %}">❤️{{ post.likes }}</a>
     {% else %}
-    <a id="mylikes" href="#">❤️{{ post.likes }}</a>
+    <a class="likes" href="#">❤️{{ post.likes }}</a>
     {% endif %}
 
     <!-- comments -->
