organised html views for logged in user.

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -10,7 +10,8 @@
     margin: 10px 0 10px 0;
 }
 
-#form-section, #post-section {
+#form-section,
+#post-section {
     padding: 10px;
 }
 
@@ -24,4 +25,15 @@
 
 a {
     text-decoration: none;
+}
+
+.like-button {
+    padding: 0;
+    border: none;
+    background: none;
+    text-decoration: none;
+}
+
+.like-button:hover {
+    cursor: pointer;
 }
