--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -6,20 +6,34 @@
 {% if user.is_authenticated %}
 <div class="comments">
     {% for post in page_obj %}
-    <blockquote class="blockquote">
+    <blockquote class="blockquote post-view" id="post-view-{{ post.id }}">
         {{ post.body | linebreaks }}
+        
     </blockquote>
+    {% if post.user|stringformat:"s" == request.user.username %}
+        <div class="edit-view" id="edit-view-{{ post.id }}">
+            <form id="edit-form-{{ post.id }}" action="{% url 'edit' post.id %}" method="PUT">
+                <div class="form-group">
+                    <textarea class="form-control" name="" id="post-body-{{ post.id }}"></textarea>
+                </div>
+                <input id="edit-button-{{ post.id }}" class="btn btn-primary" type="submit" value="Post" name="save">
+            </form>
+        </div>
+        {% endif %}
     <figcaption class="blockquote-footer">
         {{ post.created }}
         {{ post.user}}
         {% if post.user|stringformat:"s" != request.user.username %}
 
-        <form id="like-form" method="PUT" action="{% url 'like' post.id %}">
+        <form class="like-form" method="POST" action="{% url 'like' post.id %}">
+            {% csrf_token %}
             <!-- Your other form fields if any -->
-            <button data-id={{ post.id }} type="button" class="like-button">❤️ <span id="current-likes">{{ post.likes }}</span></button>
+            <button data-id={{ post.id }} type="submit" class="like-button">❤️ <span class="current-likes">{{ post.likes }}</span></button>
         </form>
         {% else %}
         <div><span>❤️ {{ post.likes }}</span></div>
+        <button class="edit-post btn btn-primary btn-sm" data-id={{ post.id }} id="edit-button-{{ post.id }}">Edit</button>
+            
         {% endif %}
         
     </figcaption>
@@ -38,14 +52,14 @@
     {% endfor %}
     {% if post.user|stringformat:"s" != request.user.username %}
 
-    <form action="{% url 'comment' post.id %}" , method="post">
+    <form action="{% url 'comment' post.id %}" , method="POST">
         {% csrf_token %}
         {% for field in form %}
         <div class="form-text">
             <div>{{ field }}</div>
         </div>
         {% endfor %}
-        <input id="post-button" class="btn btn-primary btn-sm" type="submit" value="Comment" name="save">
+        <input class="post-button" class="btn btn-primary btn-sm" type="submit" value="Comment" name="save">
     </form>
     {% endif %}
     {% endfor %}
@@ -76,7 +90,9 @@
 {% endif %}
 
 {% block script %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="{% static 'network/script.js' %}"></script>
+
 {% endblock %}
 
 {% endblock %}
