--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -11,9 +11,8 @@
         
     </blockquote>
     {% if post.user|stringformat:"s" == request.user.username %}
-        <div class="edit-view" method="POST" id="edit-view-{{ post.id }}">
-            <form class="edit-form" id="edit-form-{{ post.id }}" action="{% url 'edit' post.id %}" >
-                {% csrf_token %}
+        <div class="edit-view" id="edit-view-{{ post.id }}">
+            <form class="edit-form" id="edit-form-{{ post.id }}" action="{% url 'edit' post.id %}">
                 <div class="form-group">
                     <textarea class="form-control" name="" id="post-body-{{ post.id }}"></textarea>
                 </div>
@@ -26,8 +25,7 @@
         {{ post.user}}
         {% if post.user|stringformat:"s" != request.user.username %}
 
-        <form class="like-form" method="POST" action="{% url 'like' post.id %}">
-            {% csrf_token %}
+        <form class="like-form" action="{% url 'like' post.id %}">
             <!-- Your other form fields if any -->
             <button data-like={{ post.id }} type="submit" class="like-button">❤️ <span class="current-likes">{{ post.likes }}</span></button>
         </form>
