--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -7,11 +7,9 @@
     <form action="{% url 'post' %}" method="post">
         {% csrf_token %}
         {% for field in form %}
-        <div class="form-text">
-            <div>{{ field }}</div>
-        </div>
+        <div class="form-group">{{ field }}</div>
         {% endfor %}
-        <input id="post-button" class="btn btn-primary" type="submit" value="Post" name="save">
+        <input id="post-button" class="btn btn-secondary btn-sm" type="submit" value="Post" name="save">
     </form>
 </section>
 <hr class="hr weather-hr" />
