--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -25,9 +25,9 @@
         {{ post.user}}
         {% if post.user|stringformat:"s" != request.user.username %}
 
-        <form class="like-form" method="PUT" action="{% url 'like' post.id %}">
+        <form class="like-form" action="{% url 'like' post.id %}">
             <!-- Your other form fields if any -->
-            <button data-like={{ post.id }} type="submit" class="like-button">❤️ <span class="current-likes">{{ post.likes }}</span></button>
+            <button data-like={{ post.id }} type="submit" class="like-button">❤️ <span id="current-likes-{{ post.id }}">{{ post.likes }}</span></button>
         </form>
         {% else %}
         <div><span>❤️ {{ post.likes }}</span></div>
