working as expected.

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -26,6 +26,7 @@
                 {{ post.created }}
                 {{ post.user }}
             </figcaption>
+            <div><span>❤️ {{ post.likes }}</span></div>
             {% endfor %}
         </div>
     </div>
