--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -1,3 +1,5 @@
+
+
 .navbar {
     margin: 20px;
 }
@@ -24,7 +26,13 @@ button {
 }
 
 a {
+
     text-decoration: none;
+}
+
+.edit-post:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .like-button {
